# robot-push-btm

./: .gitignore  .gitmodules  README.MD  Some mobile base size compare.md  light-switch-order-list.md
Initial-proposel/: propersal.md
interbotics-ws/: Interbotix-arm-repos.md  LoCoBot_init.sh  LoCoBot_no_discover.sh  LoCoBot_setup_note.md  discovery_server_launch.zsh  no_discover_setup.zsh  remote_init.sh  remote_no_discover.sh
interbotics-ws/discovery-server-inits/: LoCoBot_init.zsh  discovery_server_launch.zsh
switch-flipper/: Debug-notes.md  EE-notes.md  Trossen-arm-notes.md  arm-on-the-turtle.md  camera-notes.md  locobot-usage-notes.md  moveit-arm-control-force-issue.md  moveit-note.md
switch-flipper/arm-mover/: package.xml  setup.cfg  setup.py
switch-flipper/arm-mover/arm-mover/: simple_move.py
switch-flipper/arm_mover/: package.xml  setup.py
switch-flipper/src/arm_control/: CMakeLists.txt  package.xml
switch-flipper/src/mobile_control/: CMakeLists.txt  README.md  look_front.sh  package.xml
switch-flipper/src/mobile_control/config/: 100-locobot-pantilt.rules
switch-flipper/src/mobile_control/config/urdf/: arm_mount.urdf
switch-flipper/src/mobile_control/launch/: combined_describe.xml  move_base.launch.xml
switch-flipper/src/mobile_control/meshes/: wx200_LoCoBot_clamp.stl
switch-flipper/src/mobile_control/src/: camera_waver.cpp
switch-flipper/src/vision_process/: CMakeLists.txt  package.xml
switch-flipper/vision_process/: package.xml  setup.cfg  setup.py
switch-flipper/vision_process/config/: see-frame.rviz
(+32 files in other folders)
